src/css/style.css
/* ... */
.select-dropdowm{
  background: transparent !important;
  color: #8d8f98 !important;
  font-size: 16px !important;
  font-weight: 100 !important;
  font-family: "Comfortaa-Bold" !important;
}
.multiSel-Box{
  margin-top: -3px;
  margin-left: 10px;
  width:488px;
  height: 58px;
}
.dropdown dt div span,
.multiSel span {
  display: inline-block;
  padding: 5px 10px 5px 4px;
  color: #f1f2f3;
  font-family: "Comfortaa-SemiBold";
  font-size: 13px;
  background-color: #6cb1b3;
  margin-left: 3px;
}



.dropdown dd ul {
  font-family: "Comfortaa-SemiBold";
  background-color: #e0e3e8;
  border: 0;
  color: #7c7c7e;
  display: none;
  left: 0px;
  padding: 2px 15px 2px 5px;
  position: absolute;
  top: 2px;
  width: 300px;
  list-style: none;
  height: 150px;
  overflow: auto;
  z-index: 6;
}

.dropdown span.value {
  display: none;
}

.dropdown dd ul li a {
  padding: 5px;
  display: block;
}

.dropdown dd ul li a:hover {
  background-color: #fff;
}

.hida{
  padding-top: 10px !important;
  font-size: 16px;
  color: #9799a1;
}

.group-options-box{
  display:inline-block;
  margin-top:1px;
}

.iconSpan-select{
  background-color: #6cb1b3;
  position: relative;
  margin-top: -2px;
  margin-bottom: -2px;
  cursor:pointer;
}
/*--------------------------------------------------------------------------------------------------------------------------*/




.buttons-cont{
  background-color: #575a6f;
  position: relative;
  margin-left: -21px;
  margin-right: -21px;
  z-index: 2;
}

.btn-6 {
  color: #fff;
  line-height: 42px;
  border: none;
  background-color: transparent;
  padding-left: 0px;
  padding-right: 0px;
  display: inline-block;
}
.btn-6 span {
  position: relative;
  display: block;
  width: 150px;
  height: 100%;
  background-color: #575a6f;
  cursor: pointer;
  color: #edeef1;
  transition: all 0.15s ease;
  font-weight: 600;
    font-family: "Comfortaa-Light";
}


        .btn-6-cancel{
          text-decoration: none !important;
        }
        .btn-6-cancel:hover{
          background-color: #edeee9;
        }
        .btn-6-reset{
          position: absolute;
          right: 0px;
        }

        .reset{
          width: 110px !important;
        }

.icon-FormButton{
  float: left;
  z-index: 1;
  margin-right: -30px;
}
.icon-FormButton-cancel {
  float: left;
  z-index: 1;
  margin-right: 0px;
}
.icon-FormButton-reset {
  float: left;
  z-index: 1;
  margin-right: -21px;
  margin-left: 0px;
}


.icon-FormButton:hover + .submit, .submit:hover{
  box-shadow: inset 0 0 0 2em #306e71;
  transition: all 0.2s ease;
  color: #F7F7F7 !important;

}
.icon-FormButton-cancel:hover + .cancel, .cancel:hover{
  box-shadow: inset 0 0 0 2em #af1d45;
  transition: all 0.2s ease;
  color: #F7F7F7 !important;
}

.icon-FormButton-reset:hover + .reset, .reset:hover{
  box-shadow: inset 0 0 0 2em #454858;
  transition: all 0.2s ease;
  color: #F7F7F7 !important;
}

.btn-6-cancel:hover{
  color: #F7F7F7 !important;
}



.decoration-bottomRightUpdate{
  width: 0px;
  height: 0px;
  position: relative;
  opacity: 1.1;
  float: right;
  margin-right: -21px;
  margin-bottom: -21px;
  margin-top: -50px;
}
      .decoration-bottomRight1{
        border-right: 50px solid #313338;
        border-top: 50px solid transparent;
        border-left: 50px solid transparent;
        border-bottom: 50px solid #313338;
      }

      .decoration-bottomRight2{
        margin-right: -99px;
        margin-top: -10px;
        border-right: 30px solid #888888;
        border-top: 30px solid transparent;
        border-left: 30px solid transparent;
        border-bottom: 30px solid #56575a;
      }


.decoration-bottomleftUpdate{
  width: 0px;
  height: 0px;
  position: relative;
  opacity: 1.1;
  float: left;
  margin-left: -21px;
  margin-bottom: -21px;
  margin-top: -50px;
}

      .decoration-bottomLeft1{
        width: 0px;
        border-right: 50px solid  transparent ;
        border-top: 50px solid transparent;
        border-left: 50px solid #313338;
        border-bottom: 50px solid #313338;

      }
      .decoration-bottomLeft2{
        width: 0px;
        margin-left: -99px;
        margin-top: -10px;
        border-right: 30px solid transparent;
        border-top: 30px solid transparent;
        border-left: 30px solid #888888;
        border-bottom: 30px solid #56575a;

      }








/* width */
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

/* Track */
::-webkit-scrollbar-track {
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #616265;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #737479;
}








.disable_next_or_prev{
  pointer-events: none;
  cursor: default;
  background-color: #42444a !important;
}

.pagination{
  left: 50%;
  margin-left: -176px;
  position: absolute;
}


.pagination ul{
  display: inline-block;
  background: #36373c;
  position: relative;
  padding: 0px;
  float: left;
  padding-left: 20px;
  padding-right: 20px;
  width: 245px;
  height: 50px;
  text-align: center;
  margin-top: -10px
}

.pagination ul li{
  display:inline-block;
  color: #41a0ce;
  list-style: none;
  line-height: 45px;
  text-align: center;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
  user-select: none;
  transition: all 0.3s ease;
}
.pagination ul li .numb{
  list-style: none;
  height: 100%;
  width: 45px;
  line-height: 45px;
  padding: 15px 5px;
  margin-left: 3px;
  position: relative;
  text-decoration: none;
  color: #bdbdbd;
  transition: all 0.2s ease;
}
.pagination ul li .numb .first{
  margin: 0px 3px 0 -5px;
}
.pagination ul li .numb .last{
  margin: 0px -5px 0 3px;
}
.pagination ul li .dots{
  font-size: 22px;
  cursor: default;
  padding: 0px 3px;
}
.pagination .btn_pagination {
  padding: 4px 29px;
  background-color: #505156;
  position: relative;
  top: 0px;
  float: left;
  color: #bdbdbd;
  text-decoration: none;
}
/* ... */

